<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/logo_toc_toc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="100dp"
        android:drawableTop="@drawable/ic_delivery_man"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_user_name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_input"
        android:layout_marginTop="@dimen/text_input"
        android:layout_marginEnd="@dimen/text_input"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_below="@id/logo_toc_toc"
        android:textColorHint="#F4DEDE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top1"
            android:hint="@string/ed_user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_Details1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:layout_below="@id/ed_user_name1"
        android:layout_marginStart="@dimen/text_input"
        android:layout_marginTop="@dimen/text_input"
        android:layout_marginEnd="@dimen/text_input"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:textColorHint="#F4DEDE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top1"
            android:hint="@string/ed_Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/btn_login"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary_light"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/btn_register"
        android:textSize="17sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_remember_me"
        android:layout_width="166dp"
        android:layout_height="61dp"
        android:layout_below="@id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="172dp"

        android:text="@string/checkbox_remember_me"
        android:textSize="20dp" />

</RelativeLayout>