<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".change_password">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/ic_baseline_lock_open_24"
        app:tint="#03A9F4"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_change_password"
        android:textColor="#03A9F4"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/change_password_hint"
        android:textColor="@color/secondary_text" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_current_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/logo_toc_toc"
        android:layout_marginStart="@dimen/size32"
        android:layout_marginTop="@dimen/size8"
        android:layout_marginEnd="@dimen/size32"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:background="@drawable/shape_btn_add_to_cart"
        android:textColorHint="#03A9F4"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top1"
            android:inputType="textPassword"
            android:background="@drawable/shape_btn_add_to_cart"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/ed_current_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"

        app:passwordToggleEnabled="true"
        android:layout_height="50dp"
        android:layout_below="@id/logo_toc_toc"
        android:layout_marginStart="@dimen/size32"
        android:layout_marginTop="@dimen/size8"
        android:layout_marginEnd="@dimen/size32"
        android:background="@drawable/shape_btn_add_to_cart"
        android:textColorHint="#03A9F4"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top1"
            android:inputType="textPassword"
            android:background="@drawable/shape_btn_add_to_cart"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/ed_new_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_Confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/logo_toc_toc"
        android:layout_marginStart="@dimen/size32"
        android:layout_marginTop="@dimen/size8"
        android:layout_marginEnd="@dimen/size32"
        app:passwordToggleEnabled="true"
        android:background="@drawable/shape_btn_add_to_cart"
        android:textColorHint="#03A9F4"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_Confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top1"
            android:inputType="textPassword"
            android:background="@drawable/shape_btn_add_to_cart"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/ed_Confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/shape_btn_add_to_cart"
        android:backgroundTint="#03A9F4"
        android:text="@string/btn_change_password"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="150dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="8sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center|bottom"
        android:text="@string/cancel"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>
</LinearLayout>