<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.toc_test.purchase">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/view_toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/Platform.MaterialComponents"></androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/lv_purchase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

    </ListView>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="50dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_show_last_purchase"
            android:textColor="@color/divider"
            android:textSize="@dimen/size32"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_show_all_purchase"
            android:textColor="@color/divider"
            android:textSize="@dimen/size32"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/btn_clear_all_purchase"
            android:textColor="@color/divider"
            android:textSize="@dimen/size32"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>